Full update: songs, audio files, layout and fixes

--- a/features.html
+++ b/features.html
@@ -50,12 +50,18 @@
     </div>
 
     <div class="feature-item">
-      <span>📄</span>
-      <div>
-        <h3>Sozen Tekst</h3>
-        <p>Az kal to poδ, fukaϑ tekst yast.</p>
-      </div>
-    </div>
+  <span>📄</span>
+  <div>
+    <h3>Sozen Tekst</h3>
+    <p>Az kal to poδ, fukaϑ tekst yast. Qulugh</p>
+
+    <a href="https://t.me/pomeresozen"
+       class="btn feature-btn"
+       onclick="openTelegram(event)">
+      🎧 pomerê sozen–ard
+    </a>
+  </div>
+</div>
 
     <div class="feature-item">
       <span>🎸</span>
