--- a/songs.html
+++ b/songs.html
@@ -56,7 +56,7 @@
   </aside>
 
   <section class="song-content fade-in " id="songContent">
-    <button id="back-to-list" class="back-btn">⬅ K spisku</button>
+    <button id="back-to-list" class="back-btn">⬅Pê sozen</button>
     <button id="fullscreen-btn" class="btn fullscreen-btn">
   ⛶ Polni ekran
 </button>
