--- a/feedback.html
+++ b/feedback.html
@@ -82,12 +82,12 @@
     Proect <b>Ku-en Sado</b>  peδo sut az žiwjgaẋ tar xušruy pomerê sozenat wev maъnī. Mašarden lapaϑ muhim tama fikreen - sof ikdaδ yordamen mašard xu proect bidê čido.
   </p>
   <p>
-  Agar sawol, ičizga bašand fikreyen mašard tar pero tidora yordam cakinen, ukmandaϑ  ar Instagram mašard niviset::
-  <a href="https://instagram.com/..."
+  Agar sawol, ičizga bašand fikreyen mašard tar pero tidora yordam cakinen, ukmandaϑ  ar Instagram mašard niviset:
+  <a href="https://instagram.com/kuensado"
      target="_blank"
      class="insta-link">
     <span class="insta-icon">📸</span>
-    @...
+    @kuensado
   </a>
 </p>
   <p>🤝 Qulugh, δust-mi-δustet <b>Ku-en Sado</b>-qatê ca ❤️</p>
