--- a/feedback.html
+++ b/feedback.html
@@ -93,8 +93,22 @@
   <p>🤝 Qulugh, δust-mi-δustet <b>Ku-en Sado</b>-qatê ca ❤️</p>
 </div>
 
-<footer>
-  <p>© 2025 Ku-en Sado</p>
+<footer class="site-footer">
+  <div class="footer-brand">
+    <div class="footer-title">© 2025 Ku-en Sado</div>
+    <a href="https://instagram.com/kuensado"
+       target="_blank"
+       class="footer-insta">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+           xmlns="http://www.w3.org/2000/svg">
+        <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5z"
+              stroke="currentColor" stroke-width="2"/>
+        <circle cx="12" cy="12" r="3.5" stroke="currentColor" stroke-width="2"/>
+        <circle cx="17.5" cy="6.5" r="1" fill="currentColor"/>
+      </svg>
+      @kuensado
+    </a>
+  </div>
 </footer>
 
 <script src="script.js"></script>
