--- a/features.html
+++ b/features.html
@@ -85,7 +85,7 @@
   </div>
   <div class="features">
   <a href="songs.html" class="btn">
-  🎧 Najjdam tar sozen
+  🎧 NaƔ̌jidam tar sozen
 </a>
 </div>
 </div>
